// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Link content demo works fine 1`] = `
<content>
  <wx-view
    class="link-example"
  >
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      theme="primary"
    />
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
    />
  </wx-view>
</content>
`;

exports[`Link Link disabled demo works fine 1`] = `
<disabled>
  <wx-view
    class="link-example"
  >
    <t-link
      content="跳转链接"
      disabled="{{true}}"
      hover="{{true}}"
      navigatorProps="{{
        Object {
          "url": "/pages/home/home",
        }
      }}"
      size="small"
      suffixIcon="jump"
      theme="primary"
    />
    <t-link
      content="跳转链接"
      disabled="{{true}}"
      size="small"
      suffixIcon="jump"
    />
    <t-link
      content="跳转链接"
      disabled="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="danger"
    />
  </wx-view>
  <wx-view
    class="link-example"
  >
    <t-link
      content="跳转链接"
      disabled="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="warning"
    />
    <t-link
      content="跳转链接"
      disabled="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="success"
    />
  </wx-view>
</disabled>
`;

exports[`Link Link prefix demo works fine 1`] = `
<prefix>
  <wx-view
    class="link-example"
  >
    <t-link
      content="跳转链接"
      hover="{{true}}"
      prefixIcon="link"
      size="small"
      theme="primary"
    />
    <t-link
      content="跳转链接"
      hover="{{true}}"
      prefixIcon="link"
      size="small"
    />
  </wx-view>
</prefix>
`;

exports[`Link Link size demo works fine 1`] = `
<size>
  <wx-view
    class="link-example"
  >
    <t-link
      content="S号链接"
      hover="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="primary"
    />
    <t-link
      content="M号链接"
      hover="{{true}}"
      suffixIcon="jump"
      theme="primary"
    />
    <t-link
      content="L号链接"
      hover="{{true}}"
      size="large"
      suffixIcon="jump"
      theme="primary"
    />
  </wx-view>
</size>
`;

exports[`Link Link suffix demo works fine 1`] = `
<suffix>
  <wx-view
    class="link-example"
  >
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="primary"
    />
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      suffixIcon="jump"
    />
  </wx-view>
</suffix>
`;

exports[`Link Link theme demo works fine 1`] = `
<theme>
  <wx-view
    class="link-example"
  >
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="primary"
    />
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      suffixIcon="jump"
    />
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="danger"
    />
  </wx-view>
  <wx-view
    class="link-example"
  >
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="warning"
    />
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      suffixIcon="jump"
      theme="success"
    />
  </wx-view>
</theme>
`;

exports[`Link Link underline demo works fine 1`] = `
<underline>
  <wx-view
    class="link-example"
  >
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      theme="primary"
      underline="{{true}}"
    />
    <t-link
      content="跳转链接"
      hover="{{true}}"
      size="small"
      underline="{{true}}"
    />
  </wx-view>
</underline>
`;
